[project]
name = "life-flow"
version = "0.1.0"
description = "A consumer-facing AI-powered personal organization app that automatically transforms messy, unstructured information into structured, actionable workflows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "openai>=2.38.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
